# YouTubeSearch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  def.h
whisper.cpp/: CMakeLists.txt
